examples/test/testpolicy7816.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7816
  namespace: namespace193
spec:
  podSelector:
    matchLabels:
      key13: value43
      key49: value25
      key43: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value8
          key48: value7
      podSelector:
        matchLabels:
          key18: value45
